* Fri Feb 28 2025 - tech@adalin.org
- AeonWave (4.1.0) stable; urgency=medium

 * Add a timed layer filter.
 * Add a dynamic wavefold effect.
 * Add a frequency shifter effect.
 * Implement up to 8-stage delay for delay effects.
 * Add support for bitcrushing the feedback signal of the delay effects.
 * Allow pitch values up to 10.0 for noise types in the sound section of AAXS
   files. When pitch is greater than 1.0 a high-pass filter is applied.
 * Implement a 16-band equalizer which gets enabled instead of the 8-band
   equalizer when slot 2 or slot 3 of the filter contains gain information.
 * Increase the number of frequency bands for the graphic equalizer from 4 to 5
 * Add the option to reverse timed filters and effects. To work properly LEVEL0
   of the timed-gain filter is required to be 0.0. To synchronize timed-pitch
   and/or timed-layer effects with the timed-gain filter the durations need to
   be equal.
 * Increase the number of envelope stages from 6 to 8 for all timed filters
   and effects.
 * Add support for additional volume curves beside squared which can be defined
   using the state of the volume filer.
 * Make it possible to read the pan property from a buffer if the associated
   sound file defines it.
 * Rework SIMD support code for X86_64 and ARM and increase rendering speed
   for several functions across the various rendering paths.
 * Do not filter high-frequencies as much as before.
 * Fix the LFO always being defined for the distortion effect.
 * Due to an oversight of AeonWave version 4.0 AAX_ENVELOPE_FOLLOW and
   AAX_REPEAT clashed for the number 13, rendering it impossible to assign the
   number of repeats and envelope-following at the same time. To circumvent
   this the _aaxGetSourceTypeByName function translates envelope now to
   AAX_LFO_EXPONENTIAL instead of AAX_ENVELOPE_FOLLOW but software that
   uses the timed-gain filter directly (without AAXS) may still use