@@ -688,7 +688,8 @@ enum aaxSourceType
    AAX_TRIANGLE              = 0x0004,
    AAX_SINE                  = 0x0005,
    AAX_CYCLOID               = 0x0006,
-   AAX_IMPULSE               = 0x0007,      AAX_LAST_WAVE = AAX_IMPULSE,
+   AAX_IMPULSE               = 0x0007,
+   AAX_PULSE                 = 0x0008,      AAX_LAST_WAVE = AAX_PULSE,
 
    AAX_RANDOMNESS            = 0x000C,      AAX_1ST_SOURCE = AAX_RANDOMNESS,
    AAX_ENVELOPE_FOLLOW       = 0x000D,
@@ -702,6 +703,7 @@ enum aaxSourceType
    AAX_INVERSE_SINE          = (AAX_INVERSE | AAX_SINE),
    AAX_INVERSE_CYCLOID       = (AAX_INVERSE | AAX_CYCLOID),
    AAX_INVERSE_IMPULSE       = (AAX_INVERSE | AAX_IMPULSE),
+   AAX_INVERSE_PULSE         = (AAX_INVERSE | AAX_PULSE),
 
    AAX_PURE_SAWTOOTH         = AAX_PURE_WAVEFORM|AAX_SAWTOOTH,
    AAX_PURE_SQUARE           = AAX_PURE_WAVEFORM|AAX_SQUARE,
@@ -709,6 +711,7 @@ enum aaxSourceType
    AAX_PURE_SINE             = AAX_PURE_WAVEFORM|AAX_SINE,
    AAX_PURE_CYCLOID          = AAX_PURE_WAVEFORM|AAX_CYCLOID,
    AAX_PURE_IMPULSE          = AAX_PURE_WAVEFORM|AAX_IMPULSE,
+   AAX_PURE_PULSE            = AAX_PURE_WAVEFORM|AAX_PULSE,
 
    AAX_INVERSE_PURE_SAWTOOTH = AAX_PURE_WAVEFORM|AAX_INVERSE_SAWTOOTH,
    AAX_INVERSE_PURE_SQUARE   = AAX_PURE_WAVEFORM|AAX_INVERSE_SQUARE,
@@ -716,6 +719,7 @@ enum aaxSourceType
    AAX_INVERSE_PURE_SINE     = AAX_PURE_WAVEFORM|AAX_INVERSE_SINE,
    AAX_INVERSE_PURE_CYCLOID  = AAX_PURE_WAVEFORM|AAX_INVERSE_CYCLOID,
    AAX_INVERSE_PURE_IMPULSE  = AAX_PURE_WAVEFORM|AAX_INVERSE_IMPULSE,
+   AAX_INVERSE_PURE_PULSE    = AAX_PURE_WAVEFORM|AAX_INVERSE_PULSE,
 
    AAX_INVERSE_ENVELOPE_FOLLOW = (AAX_INVERSE | AAX_ENVELOPE_FOLLOW),
    AAX_INVERSE_TIMED_TRANSITION = (AAX_INVERSE | AAX_TIMED_TRANSITION),
